fixed stuff, bare bones API running
