# lod_lib.py
@@ -4,17 +4,20 @@ from utils import get_location
 
 
 class LikeOrDislike:
-    def getLocationsLODdata(self, get_data):
-        location = get_location(get_data)
-        if not location:
-            return make_response(
-                jsonify(
-                    {"message": 'Location not found'}
-                ),
-                400,
-            )
+    def getLocationsLODdata(self, locations):
+        if not locations['continent']:
+            return jsonify(LocationData.objects().all())
         else:
-            return jsonify(location.to_json())
+            location_data = get_location(locations)
+            if not location_data:
+                return make_response(
+                    jsonify(
+                        {"message": 'Location not found'}
+                    ),
+                    400,
+                )
+            else:
+                return jsonify(location_data.to_json())
 
     def updateLocationsLODdata(self, location_lod_data: LocationData, liked: bool):
         print(location_lod_data)
@@ -31,5 +34,10 @@ class LikeOrDislike:
                 location_data.update(inc__likes=1)
             else:
                 location_data.update(inc__dislikes=1)
-            location_data.save()
-            return jsonify(location_data.to_json())
+
+            return make_response(
+                jsonify(
+                    {"message": 'OK'}
+                ),
+                200,
+            )
