# static/swagger.json
@@ -16,13 +16,24 @@
     "/locations/fetch": {
       "post": {
         "summary": "List of all locations and the likes and dislikes recieved for each of them respectively",
+        "requestBody": {
+          "description": "Locations",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/LocationsData"
+              }
+            }
+          },
+          "required": true
+        },
         "responses": {
           "200": {
             "description": "A list of locations with their like or dislike data",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/schemas/LocationData"
+                  "$ref": "#/components/schemas/LocationsData"
                 }
               }
             }
@@ -32,7 +43,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/schemas/Error"
+                  "$ref": "#/components/schemas/Error"
                 }
               }
             }
@@ -43,13 +54,24 @@
     "/locations/like": {
       "post": {
         "summary": "Add a like to the specified location",
+        "requestBody": {
+          "description": "Location Like",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/LocationsData"
+              }
+            }
+          },
+          "required": true
+        },
         "responses": {
           "200": {
             "description": "A like was successfully added for the specified location",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/schemas/LocationData"
+                  "$ref": "#/components/schemas/LocationsData"
                 }
               }
             }
@@ -59,7 +81,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/schemas/Error"
+                  "$ref": "#/components/schemas/Error"
                 }
               }
             }
@@ -70,13 +92,24 @@
     "/locations/dislike": {
       "post": {
         "summary": "Add a dislike to the specified location",
+        "requestBody": {
+          "description": "Location Dislike",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/LocationsData"
+              }
+            }
+          },
+          "required": true
+        },
         "responses": {
           "200": {
             "description": "A dislike was successfully added for the specified location",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/schemas/LocationData"
+                  "$ref": "#/components/schemas/LocationsData"
                 }
               }
             }
@@ -86,7 +119,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/schemas/Error"
+                  "$ref": "#/components/schemas/Error"
                 }
               }
             }
@@ -104,16 +137,20 @@
         ],
         "properties": {
           "continent": {
-            "type": "string"
+            "type": "string",
+            "example": ""
           },
           "country": {
-            "type": "string"
+            "type": "string",
+            "example": ""
           },
           "state": {
-            "type": "string"
+            "type": "string",
+            "example": ""
           },
           "city": {
-            "type": "string"
+            "type": "string",
+            "example": ""
           },
           "likes": {
             "type": "integer"
